@@ -1,8 +1,12 @@
 siduxcc (0.10.13) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 22 Jun 2008 16:13:33 +0200
+  [ Fabian Wuertz ]
+  * sidux-hermes-kde4 added
+
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 24 Jun 2008 17:26:12 +0200
 
 siduxcc (0.10.12) unstable; urgency=low
 
